--- a/.github/workflows/readme-langs.yml
+++ b/.github/workflows/readme-langs.yml
@@ -17,15 +17,17 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: "24"
 
       - run: node scripts/update-readme.js
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - run: |
+      - name: Commit changes
+        run: |
           git config user.name "readme-bot"
           git config user.email "readme-bot@users.noreply.github.com"
           git add README.md
-          git commit -m "doc: updated README.md" || exit 0
+          git diff --cached --quiet && exit 0
+          git commit -m "doc: updated README.md"
           git push
