--- a/.github/workflows/readme-langs.yml
+++ b/.github/workflows/readme-langs.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           git config user.name "readme-bot"
           git config user.email "readme-bot@users.noreply.github.com"
-          git add README.md
+          git add README.md stats.svg
           git diff --cached --quiet && exit 0
           git commit -m "doc: updated README.md"
           git push
