--- a/.github/workflows/readme-langs.yml
+++ b/.github/workflows/readme-langs.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Commit changes
         run: |
-          git config user.name "readme-bot"
+          git config user.name "github-actions[bot]"
           git config user.email "readme-bot@users.noreply.github.com"
           git add README.md stats.svg
           git diff --cached --quiet && exit 0
