--- a/.github/workflows/readme-langs.yml
+++ b/.github/workflows/readme-langs.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Commit changes
         run: |
           git config user.name "github-actions[bot]"
-          git config user.email "readme-bot@users.noreply.github.com"
+          git config user.email 41898282+github-actions[bot]@users.noreply.github.com
           git add README.md stats.svg
           git diff --cached --quiet && exit 0
           git commit -m "doc: updated README.md"
